# sync

./: Cargo.toml
src/: cred.toml  main.rs
